// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component render should render checkbox correctly 1`] = `
<TouchableOpacity
  activeOpacity={1}
  disabled={false}
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
  testID="checkbox"
>
  <TouchableOpacity
    disabled={false}
    onPress={[Function]}
    testID="touchable-ripple"
  >
    <View
      color="primary"
      disabled={false}
      selected={false}
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": "#777777",
            "borderRadius": 3,
            "borderWidth": 2,
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          },
        ]
      }
      testID="checkbox-box"
    />
  </TouchableOpacity>
</TouchableOpacity>
`;

exports[`Checkbox component render should render checkbox disabled correctly 1`] = `
<TouchableOpacity
  activeOpacity={1}
  disabled={true}
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
  testID="checkbox"
>
  <TouchableOpacity
    disabled={true}
    onPress={[Function]}
    testID="touchable-ripple"
  >
    <View
      color="primary"
      disabled={true}
      selected={false}
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": "#bbbbbb",
            "borderRadius": 3,
            "borderWidth": 2,
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          },
        ]
      }
      testID="checkbox-box"
    />
  </TouchableOpacity>
</TouchableOpacity>
`;

exports[`Checkbox component render should render checkbox indeterminate selected but disabled correctly 1`] = `
<TouchableOpacity
  activeOpacity={1}
  disabled={true}
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
  testID="checkbox"
>
  <TouchableOpacity
    disabled={true}
    onPress={[Function]}
    testID="touchable-ripple"
  >
    <View
      color="primary"
      disabled={true}
      selected={true}
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#bbbbbb",
            "borderColor": "#bbbbbb",
            "borderRadius": 3,
            "borderWidth": 2,
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          },
        ]
      }
      testID="checkbox-box"
    >
      <Text
        accessibilityRole="image"
        style={
          Object {
            "color": "#ffffff",
            "fontFamily": "natds-icons",
            "fontSize": 16,
          }
        }
        testID="natds-icon"
      >
        
      </Text>
    </View>
  </TouchableOpacity>
</TouchableOpacity>
`;

exports[`Checkbox component render should render checkbox indeterminate selected correctly 1`] = `
<TouchableOpacity
  activeOpacity={1}
  disabled={false}
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
  testID="checkbox"
>
  <TouchableOpacity
    disabled={false}
    onPress={[Function]}
    testID="touchable-ripple"
  >
    <View
      color="primary"
      disabled={false}
      selected={true}
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#f4ab34",
            "borderColor": "#f4ab34",
            "borderRadius": 3,
            "borderWidth": 2,
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          },
        ]
      }
      testID="checkbox-box"
    >
      <Text
        accessibilityRole="image"
        style={
          Object {
            "color": "#ffffff",
            "fontFamily": "natds-icons",
            "fontSize": 16,
          }
        }
        testID="natds-icon"
      >
        
      </Text>
    </View>
  </TouchableOpacity>
</TouchableOpacity>
`;

exports[`Checkbox component render should render checkbox selected but disabled correctly 1`] = `
<TouchableOpacity
  activeOpacity={1}
  disabled={true}
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
  testID="checkbox"
>
  <TouchableOpacity
    disabled={true}
    onPress={[Function]}
    testID="touchable-ripple"
  >
    <View
      color="primary"
      disabled={true}
      selected={true}
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#bbbbbb",
            "borderColor": "#bbbbbb",
            "borderRadius": 3,
            "borderWidth": 2,
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          },
        ]
      }
      testID="checkbox-box"
    >
      <Text
        accessibilityRole="image"
        style={
          Object {
            "color": "#ffffff",
            "fontFamily": "natds-icons",
            "fontSize": 16,
          }
        }
        testID="natds-icon"
      >
        
      </Text>
    </View>
  </TouchableOpacity>
</TouchableOpacity>
`;

exports[`Checkbox component render should render checkbox selected correctly 1`] = `
<TouchableOpacity
  activeOpacity={1}
  disabled={false}
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
  testID="checkbox"
>
  <TouchableOpacity
    disabled={false}
    onPress={[Function]}
    testID="touchable-ripple"
  >
    <View
      color="primary"
      disabled={false}
      selected={true}
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#f4ab34",
            "borderColor": "#f4ab34",
            "borderRadius": 3,
            "borderWidth": 2,
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          },
        ]
      }
      testID="checkbox-box"
    >
      <Text
        accessibilityRole="image"
        style={
          Object {
            "color": "#ffffff",
            "fontFamily": "natds-icons",
            "fontSize": 16,
          }
        }
        testID="natds-icon"
      >
        
      </Text>
    </View>
  </TouchableOpacity>
</TouchableOpacity>
`;
